--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,7 @@
         <!-- 左侧导航栏 -->
         <div class="sidebar">
             <div class="sidebar-title">电信客户分析系统</div>
-            <div class="nav-item active" onclick="showSection('churn-analysis')">客户流失分析</div>
+            <div class="nav-item active" onclick="showSection('churn-analysis', event)">客户流失分析</div>
             <div class="nav-item" onclick="showSection('demographic-analysis')">人口统计分析</div>
             <div class="nav-item" onclick="showSection('service-analysis')">服务使用分析</div>
             <div class="nav-item" onclick="showSection('financial-analysis')">财务分析</div>
