差不多可以了

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,7 +69,7 @@
                 <!-- 服务使用分析 -->
                 <div id="service-analysis" class="section">
                     <h1 class="page-title">服务使用分析</h1>
-                    <div class="charts-container">
+                    <div class="charts-container vertical">
                         <div class="chart-container">
                             <div id="serviceHeatmap" class="chart"></div>
                         </div>
